Changed "action" file

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 		<section class="container">
 	    <div class="login">
 	      <h1>Enter additional info</h1>
-	      <form method="get" action="index.php" id="test">
+	      <form method="get" action="script.php" id="test">
 	        <p><input type="text" name="username" placeholder="Username"></p>
 	        <p><input type="text" name="number" placeholder="Number"></p>
 	        <p><input type="text" name="monthnum" placeholder="Monthnum"></p>
